Previously the working dir was one level too deep (inside first package segment), causing java -cp . <FQCN> to miss the class file. Now:
Walks upward to directory ending in full package path
Strips all package segments to find true root
Compiles relative to root; runs with -cp .
Keeps stderr + hint diagnostics