@@ -1,137 +1,41 @@
 package formatter;
 
 import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 /**
  * Utility methods for file I/O operations and Java program execution.
- *
- * New:
- *  - Added ExecutionResult record
- *  - Added runJavaFileDetailed(...) which captures compiler messages (stderr + stdout)
- *    separately from program runtime output.
- *  - Original runJavaFile(...) kept for backward compatibility (now delegates).
+ * Package-root aware (fixed off-by-one parent bug).
  */
 public class Utils {
 
-    /**
-     * Reads the entire content of a file as a string.
-     */
+    private static final Pattern PACKAGE_PATTERN =
+            Pattern.compile("^\\s*package\\s+([a-zA-Z0-9_.]+)\\s*;");
+
+    /* ---------- File helpers ---------- */
+
     public static String readFile(String path) throws IOException {
-        return new String(Files.readAllBytes(Paths.get(path)));
+        return Files.readString(Paths.get(path), StandardCharsets.UTF_8);
     }
 
-    /**
-     * Writes content to a file, creating parent directories if needed.
-     */
     public static void writeFile(String path, String content) throws IOException {
         Path filePath = Paths.get(path);
         Path parentDir = filePath.getParent();
         if (parentDir != null && !Files.exists(parentDir)) {
             Files.createDirectories(parentDir);
         }
-        Files.write(filePath, content.getBytes());
+        Files.writeString(filePath, content, StandardCharsets.UTF_8);
     }
 
-    /**
-     * Backward compatible helper: returns ONLY program output (or compilation failure output).
-     * Internally uses the new detailed method.
-     */
-    public static String runJavaFile(String codeFilePath) throws IOException, InterruptedException {
-        ExecutionResult res = runJavaFileDetailed(codeFilePath);
-        if (!res.compiled()) {
-            // If compilation failed, return compiler messages prefixed
-            return "[Compilation failed]\n" + res.compilerMessages();
-        }
-        return res.programOutput();
-    }
-
-    /**
-     * Detailed execution result capturing compilation diagnostics AND program output.
-     *
-     * compilerMessages:
-     *   - All lines emitted by javac to stderr (and stdout, rarely used by javac)
-     *   - Empty String if no diagnostics
-     *
-     * programOutput:
-     *   - Stdout of the executed class (if compilation succeeded)
-     *   - Empty String if compilation failed
-     *
-     * compiled: true if javac exit code == 0
-     *
-     * Notes:
-     *  - We do NOT persist compiler messages; caller can decide how to present them.
-     *  - No timeout / sandboxing (future improvement).
-     */
-    public static ExecutionResult runJavaFileDetailed(String codeFilePath) throws IOException, InterruptedException {
-        File file = new File(codeFilePath);
-        if (!file.isFile()) {
-            return new ExecutionResult(false, "[Source file not found: " + codeFilePath + "]", "");
-        }
-        String dir = file.getParent();
-        String className = file.getName().replace(".java", "");
-
-        // 1. Compile
-        ProcessBuilder compilePB = new ProcessBuilder("javac", file.getAbsolutePath());
-        compilePB.directory(new File(dir));
-        Process compileProc = compilePB.start();
-
-        StringBuilder compilerMsgs = new StringBuilder();
-        // Capture stderr
-        try (BufferedReader err = new BufferedReader(new InputStreamReader(compileProc.getErrorStream()))) {
-            String line;
-            while ((line = err.readLine()) != null) {
-                compilerMsgs.append(line).append('\n');
-            }
-        }
-        // Capture stdout from compiler (rare, but include it)
-        try (BufferedReader out = new BufferedReader(new InputStreamReader(compileProc.getInputStream()))) {
-            String line;
-            while ((line = out.readLine()) != null) {
-                compilerMsgs.append(line).append('\n');
-            }
-        }
-
-        int compileExit = compileProc.waitFor();
-        boolean compiled = compileExit == 0;
-
-        if (!compiled) {
-            return new ExecutionResult(false, compilerMsgs.toString(), "");
-        }
-
-        // 2. Run
-        ProcessBuilder runPB = new ProcessBuilder("java", className);
-        runPB.directory(new File(dir));
-        Process runProc = runPB.start();
-
-        StringBuilder programOut = new StringBuilder();
-        try (BufferedReader r = new BufferedReader(new InputStreamReader(runProc.getInputStream()))) {
-            String line;
-            while ((line = r.readLine()) != null) {
-                programOut.append(line).append('\n');
-            }
-        }
-        // (Optionally capture stderr of program - could append or separate. For now ignore or could add.)
-        int runExit = runProc.waitFor();
-        if (runExit != 0) {
-            programOut.append("\n[Program exited with code ").append(runExit).append("]");
-        }
-
-        return new ExecutionResult(true, compilerMsgs.toString(), programOut.toString());
-    }
-
-    /**
-     * Simple existence + readability check.
-     */
     public static boolean fileExists(String path) {
         if (path == null || path.trim().isEmpty()) return false;
         Path filePath = Paths.get(path);
         return Files.exists(filePath) && Files.isReadable(filePath);
     }
 
-    /**
-     * Extract file extension.
-     */
     public static String getFileExtension(String path) {
         if (path == null || path.trim().isEmpty()) return "";
         int lastDot = path.lastIndexOf('.');
@@ -141,9 +45,146 @@ public class Utils {
         return "";
     }
 
+    /* ---------- Public execution API ---------- */
+
+    public static String runJavaFile(String codeFilePath) throws IOException, InterruptedException {
+        ExecutionResult res = runJavaFileDetailed(codeFilePath);
+        if (!res.compiled()) {
+            return "[Compilation failed]\n" + res.compilerMessages();
+        }
+        return res.programOutput();
+    }
+
+    public static ExecutionResult runJavaFileDetailed(String codeFilePath) throws IOException, InterruptedException {
+        File sourceFile = new File(codeFilePath);
+        if (!sourceFile.isFile()) {
+            return new ExecutionResult(false,
+                    "[Source file not found: " + codeFilePath + "]",
+                    "");
+        }
+
+        String simpleClassName = sourceFile.getName().replaceAll("\\.java$", "");
+        String packageName = detectPackage(sourceFile);
+        String fqcn = (packageName == null ? simpleClassName : packageName + "." + simpleClassName);
+
+        File packageRoot = determinePackageRoot(sourceFile, packageName);
+        if (packageName != null && packageRoot == null) {
+            return new ExecutionResult(false,
+                    "[Could not determine package root for package " + packageName + "]",
+                    "");
+        }
+        File workDir = (packageRoot != null) ? packageRoot : sourceFile.getParentFile();
+
+        Path workDirPath = workDir.toPath().toAbsolutePath().normalize();
+        Path sourcePath = sourceFile.toPath().toAbsolutePath().normalize();
+        String relativeSource = workDirPath.relativize(sourcePath).toString();
+
+        // (1) Compile from package root so output directory tree matches package.
+        ProcessBuilder compilePB = new ProcessBuilder("javac", relativeSource);
+        compilePB.directory(workDir);
+        Process compileProc = compilePB.start();
+
+        String compilerMessages = readAll(compileProc.getErrorStream()) +
+                                  readAll(compileProc.getInputStream());
+        int compileExit = compileProc.waitFor();
+        boolean compiled = compileExit == 0;
+
+        if (!compiled) {
+            return new ExecutionResult(false, compilerMessages, "");
+        }
+
+        // (2) Run with classpath = package root
+        ProcessBuilder runPB = new ProcessBuilder("java", "-cp", ".", fqcn);
+        runPB.directory(workDir);
+        Process runProc = runPB.start();
+
+        String stdout = readAll(runProc.getInputStream());
+        String stderr = readAll(runProc.getErrorStream());
+        int runExit = runProc.waitFor();
+
+        StringBuilder programOut = new StringBuilder();
+        if (!stdout.isBlank()) {
+            programOut.append(stdout);
+            if (!stdout.endsWith("\n")) programOut.append('\n');
+        }
+        if (!stderr.isBlank()) {
+            programOut.append("[stderr]\n").append(stderr.trim()).append('\n');
+        }
+        if (runExit != 0) {
+            programOut.append("[Program exited with code ").append(runExit).append("]\n");
+            if (stderr.contains("Could not find or load main class")) {
+                programOut.append("[Hint] FQCN: ").append(fqcn).append('\n')
+                          .append("[Hint] Working dir: ").append(workDir.getAbsolutePath()).append('\n')
+                          .append("[Hint] Expected: ")
+                          .append(new File(workDir, fqcn.replace('.', File.separatorChar) + ".class").getAbsolutePath())
+                          .append('\n');
+            }
+        }
+
+        return new ExecutionResult(true, compilerMessages, programOut.toString());
+    }
+
+    /* ---------- Package / root detection ---------- */
+
+    private static String detectPackage(File sourceFile) {
+        try (BufferedReader br = new BufferedReader(new FileReader(sourceFile, StandardCharsets.UTF_8))) {
+            String line; int lines = 0;
+            while ((line = br.readLine()) != null && lines++ < 120) {
+                Matcher m = PACKAGE_PATTERN.matcher(line);
+                if (m.find()) return m.group(1);
+            }
+        } catch (IOException ignored) {}
+        return null;
+    }
+
     /**
-     * Result container for detailed compilation + execution.
+     * Find directory whose trailing segments match the package path (e.g. cs_1102_base/Unit_0),
+     * then strip exactly that many segments to reach the true package root.
      */
+    private static File determinePackageRoot(File sourceFile, String packageName) {
+        if (packageName == null) return null;
+        String[] segs = packageName.split("\\.");
+        Path current = sourceFile.getParentFile().toPath().toAbsolutePath();
+
+        while (current != null) {
+            if (endsWithSegments(current, segs)) {
+                Path root = current;
+                for (int i = 0; i < segs.length; i++) {
+                    if (root != null) root = root.getParent();
+                }
+                return (root == null) ? null : root.toFile();
+            }
+            current = current.getParent();
+        }
+        return null;
+    }
+
+    private static boolean endsWithSegments(Path path, String[] segs) {
+        int nameCount = path.getNameCount();
+        if (nameCount < segs.length) return false;
+        for (int i = 0; i < segs.length; i++) {
+            String expect = segs[segs.length - 1 - i];
+            String have = path.getName(nameCount - 1 - i).toString();
+            if (!expect.equals(have)) return false;
+        }
+        return true;
+    }
+
+    /* ---------- Stream util ---------- */
+
+    private static String readAll(InputStream in) throws IOException {
+        try (BufferedReader br = new BufferedReader(new InputStreamReader(in, StandardCharsets.UTF_8))) {
+            StringBuilder sb = new StringBuilder();
+            String line;
+            while ((line = br.readLine()) != null) {
+                sb.append(line).append('\n');
+            }
+            return sb.toString();
+        }
+    }
+
+    /* ---------- Result record ---------- */
+
     public record ExecutionResult(boolean compiled,
                                   String compilerMessages,
                                   String programOutput) { }
